/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Miguel Rosario
 */
package baseline;

public class Item {
    private String description;
    private String dueDate;
    private boolean isComplete;

    public Item(String description, String dueDate, boolean isComplete) {
        // Initialize an item object and assign the parameters to the corresponding variables.
    }

    public void setComplete(boolean complete) {
        // Set if the item is complete.
    }

    public boolean isComplete() {
        // Return whether the item is complete.
        return false;
    }

    public void setDescription(String description) {
        // Sets the item's description.
    }

    public String getDescription() {
        // Return the item's description.
        return "";
    }

    public void setDueDate(String dueDate) {
        // Sets the item's due date.
    }

    public String getDueDate() {
        // Returns the item's due date.
        return "";
    }

    public String toString() {
        // Return a string containing the info as following:
        // description + "," + dueDate + "," + isComplete
        return "";
    }
}
